<resources>
    <string name="app_name">LW-5-1</string>

    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">Email:</string>
    <string name="address">Address:</string>
    <string name="phone">Phone:</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="get">Get</string>
    <string name="clear">Clear</string>
    <string name="enter_id">Enter ID</string>
    <string name="user_deleted">User deleted</string>
    <string name="user_updated">User updated</string>
    <string name="user_added">User added</string>
    <string name="sort_first_name">First name</string>
    <string name="sort_last_name">Last name</string>
    <string name="sort_email">E-mail</string>
    <string name="empty_fields">Some fields are empty</string>
    <string name="db_was_cleared">Database was cleared</string>
    <string name="saved_to_card">Data saved to SD card</string>

</resources>