<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ID" />

        <EditText
            android:id="@+id/idEt"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp" />

        <Button
            android:id="@+id/updateBtn"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/update" />

        <Button
            android:id="@+id/deleteBtn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/delete" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/first_name" />

        <EditText
            android:id="@+id/firstNameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/last_name" />

        <EditText
            android:id="@+id/lastNameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/address" />

        <EditText
            android:id="@+id/addressEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/phone" />

        <EditText
            android:id="@+id/phoneEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:id="@+id/photoImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_foreground" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addBtn"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/add" />

        <Button
            android:id="@+id/readBtn"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/get" />

        <Button
            android:id="@+id/clearBtn"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:text="@string/clear" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/sortRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioOption1"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/sort_first_name" />

            <RadioButton
                android:id="@+id/radioOption2"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/sort_last_name" />

            <RadioButton
                android:id="@+id/radioOption3"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/sort_email" />

        </RadioGroup>

        <View
            android:layout_width="10dp"
            android:layout_height="140dp"
            android:layout_weight="2" />

        <Button
            android:id="@+id/sortButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sort"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>


</LinearLayout>